# customer-service-env

./: .env.example  .gitignore  Dockerfile  README.md  evaluate.py  inference.py  load_env.bat  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  env.py  main.py  models.py  tools.py
app/data/: knowledge_base.json  ticket_templates.json
app/graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
app/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
server/: app.py
