[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-customer-service-env"
version = "1.0.0"
description = "Customer Service environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "groq>=0.9.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "customer_service_env.server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/cop91/Customer-Service-Agents-OpenEnv"
Repository = "https://github.com/SEERAPUSANKARARAO/customer-service-env"

[tool.setuptools]
include-package-data = true
packages = ["customer_service_env", "customer_service_env.server"]
package-dir = { "customer_service_env" = ".", "customer_service_env.server" = "server" }
